updated social media button styling

--- a/contact.html
+++ b/contact.html
@@ -25,10 +25,12 @@ maybe just include nave but remove the contact button -->
           <li><a target="_blank" href="https://www.youtube.com/watch?v=ZS8aMqD4tZg">Contact</a></li>
       </ul>
   </nav>
+<section>
 
-<header><h1>Contact</h1></header>
+<!-- <header><h1>Contact</h1></header> -->
 
-<section class="contactLinks">
+</section>
+<section class="contactLinksSection">
 <a target="_blank" href="https://www.linkedin.com/in/nelson-strickland/"><img class="contactLogo" id="linkedinLogo" src="./Resources/Images/Icons/linkedin.png" alt="LinkedIn logo"></a></p>
 <a target="_blank" href="https://github.com/Wildgoosechaze"><img class="contactLogo" id="githubLogo" src="./Resources/Images/Icons/github.png" alt="GitHub logo"></a></p>
 <a target="_blank" href="https://www.facebook.com/profile.php?id=1576356706"><img class="contactLogo" id="facebookLogo" src="./Resources/Images/Icons/facebook.png" alt="Facebook logo"></a></p>
