added index content/messed up contact button styles

--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@ maybe just include nave but remove the contact button -->
 <nav>
     <div class="nav-left">
       <h2 class="nav-title">Nelson Strickland</h2>
-      <img src="./Resources/Images/FB Avi.jpg" alt="A Funky Goose Logo" class="logo">
+      <img src="./Resources/Images/Icons/gooseFlyingIcon.png" alt="A Funky Goose Logo" class="logo">
     </div>
       <ul class="main-nav-buttons">
           <li><a href="./index.html">Home</a></li>
@@ -27,7 +27,7 @@ maybe just include nave but remove the contact button -->
   </nav>
 <section>
 
-<!-- <header><h1>Contact</h1></header> -->
+<header class="contactHeader"><h1 id="contactH1">You can find me on :</h1></header>
 
 </section>
 <section class="contactLinksSection">
