fixed contact buttons/added index content/broke contact sections

--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 
 <body>
     <!-- Creact Contact page
-    be sure to include a button that will take back to index
+    TODO: be sure to include a button that will take back to index 
 maybe just include nave but remove the contact button -->
 
 <nav>
