--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@ maybe just include nave but remove the contact button -->
 <nav>
     <div class="nav-left">
       <h2 class="nav-title">Nelson Strickland</h2>
-      <img src="./Resources/Images/Icons/gooseFlyingIcon.png" alt="A Funky Goose Logo" class="logo">
+      <img src="./Resources/Images/Icons/gooseFlyingIcon.png" alt="A Funky Goose Logo" class="logo" id="navLogo">
     </div>
       <ul class="main-nav-buttons">
           <li><a href="./index.html">Home</a></li>
@@ -43,6 +43,7 @@ maybe just include nave but remove the contact button -->
     <button class="contactButton" id="emailButton">Talk to me Goose</button>
 </section>
 
+<script src="./contactScript.js"></script>
 </body>
 
 <footer>
