grid made/skills section added

--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@ maybe just include nave but remove the contact button -->
 
 <nav>
     <div class="nav-left">
-      <h2 class="nav-title">Nelson Strickland</h2>
+      <h2 id="nav-title">Nelson Strickland</h2>
       <img src="./Resources/Images/Icons/gooseFlyingIcon.png" alt="A Funky Goose Logo" class="logo" id="navLogo">
     </div>
       <ul class="main-nav-buttons">
@@ -43,7 +43,7 @@ maybe just include nave but remove the contact button -->
     <button class="contactButton" id="emailButton">Talk to me Goose</button>
 </section>
 
-<script src="./contactScript.js"></script>
+<script src="./JS/contactScript.js"></script>
 </body>
 
 <footer>
