fixed contact page script link

--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@ maybe just include nave but remove the contact button -->
     <button class="contactButton" id="emailButton">Talk to me Goose</button>
 </section>
 
-<script src="./JS/contactScript.js"></script>
+<script src="./JS/script.js"></script>
 </body>
 
 <footer>
