font styles add/project links add/div spacing

--- a/contact.html
+++ b/contact.html
@@ -20,8 +20,8 @@ maybe just include nave but remove the contact button -->
     </div>
       <ul class="main-nav-buttons">
           <li><a href="./index.html">Home</a></li>
-          <li><a href="#featured-section">About</a></li>
-          <li><a href="#about-section" >Cool Things</a></li>
+          <li><a href="#aboutSection">About</a></li>
+          <li><a href="#projectGrid" >Cool Things</a></li>
           <li><a target="_blank" href="https://www.youtube.com/watch?v=ZS8aMqD4tZg">Contact</a></li>
       </ul>
   </nav>
